# mle-training

./: .gitignore  README.md  Readme.md  env.yaml  env.yml  my_unix_session  nonstandardcode.py  pyproject.toml
artifacts/models/: model.pkl
docs/source/: conf.py  index.rst
nonstandardcode.egg-info/: PKG-INFO  SOURCES.txt
src/ml_workflow/: ingest_data.py  score.py  train.py
src/ml_workflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ml_workflow/utils/: logging.py
tests/functional/: test_end_to_end_workflow.py  test_installation.py
tests/unit/: test_imports.py  test_ingest_data.py  test_score.py  test_train.py
