[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[tool.flake8]
max-line-length = 80
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-workflow"
version = "0.1.0"
description = "Production-ready ML workflow package with ingest, train, and score steps"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "pyyaml",
    "loguru"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
